# IMAN

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  ai-controller-example.js  company_profile.yaml  docker-compose.yml  download_aggregated_docs.py  env.example  pyproject.toml  setup.py
alembic/: env.py
alembic/versions/: 001_consolidated.py  001_initial.py  001_initial_tenders_and_chunks.py  002_add_cpv_codes.py  002_eu_items.py  002_eu_project_title.py  003_tender_summary_embedding.py  004_shorten_tender_id.py  005_tender_triage.py  006_tender_execution_period.py  007_eu_item_triage.py  008_tender_pdf_urls.py  009_tender_submission_deadline.py  010_triage_score.py  011_drop_document_chunks.py  012_eu_item_programme_fields.py  013_eu_item_programme_part_mission_group.py  014_eu_organizations_projects.py  015_cordis_ids_as_text.py  016_company_profile.py
data-sources/Europe/: EU Search API (fetch_eu_topics & fetch_eu_calls).postman_collection.json  fetch_eu_search.py
docker/: entrypoint-user-code.sh
docker/dagster_home/: dagster.yaml  workspace.yaml
docker/postgres/init/: 01-create-databases.sql  02-enable-vector.sh
iman_ingestion/: __init__.py  definitions.py  partner_recommender.py  pdf_extract.py  resources.py
iman_ingestion/aggregated/: __init__.py  cli.py  ingestion.py
iman_ingestion/api/: app.py  eu_items.py  eu_orgs.py  eu_projects.py  jobs.py  profile.py  schemas.py  tenders.py
iman_ingestion/assets/: __init__.py  eu_pipeline.py  pipeline.py
iman_ingestion/db/: __init__.py  models.py  session.py
iman_ingestion/eu/: __init__.py  client.py  load_cordis.py
iman_ingestion/llm/: __init__.py  client.py  pdf_to_images.py  tender_analysis.py  tender_fields.py
iman_ingestion/triage/: __init__.py  company_profile.py  scorer.py  triage_prompt.py
seeds/: generate_seed.py  seed.sql
tests/: __init__.py  llm_live_helpers.py  run_pcap_analysis.py  test_analyze_tender_one_entry_pdf.py  test_tender_fields.py  test_tender_llm_integration.py  test_triage.py
tests/fixtures/: sample_tender.json
